--- a/storage-report/README
+++ b/storage-report/README
@@ -1,3 +1,3 @@
-Storage Reporting Utility. Instuctions can be found here:
+Storage Reporting Utility. Instructions can be found here:
 
 http://www.nineproductions.com/python-file-system-storage-report/
